src/chrome/komodo/skin/plat/mac/menus.less
@import url("chrome://komodo/skin/plat/shared/menus.less");

/**
 * File Status within menu items.
 */
.menu-file-status-image-box {
    margin-left: -12px;
}

/* Fix menu alignment when icons are visible */
menu, menuitem
{
    padding-left: 26px !important;

    .menu-iconic-icon:not([disabled])
    {
        /* force 16px width as some menuitems have an image element with
         * no actual image src */
        width: 16px;
        margin-left: -21px !important;
    }
}

menuitem[type="checkbox"] > .menu-iconic-left
{
    margin-left: -22px;
    min-width: 22px;
    min-height: 16px;
    padding-left: 0;
}

menuitem[type="radio"] > .menu-iconic-left
{
    margin-left: -22px;
    min-width: 22px;
    min-height: 16px;
    padding-left: 0;
}

menuitem.languageicon[type="checkbox"] image
{
    margin-left: 22px !important;
    margin-right: 4px !important;
}

/* Disable main menubar menu icons */
#toolbar-menubar menu.menu-iconic,
#toolbar-menubar menuitem.menuitem-iconic
{
    /* Requires important due to some icon rules having an !important rule
     * These icons in turn require the rule due to the hierarchy of platform.less
     * See bug #97665 */
    list-style-image: none !important;
}

